<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/move"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/arrowLeft"
        android:layout_width="42dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="137dp"
        android:contentDescription="@string/arrow1"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/arrowRight"
        android:layout_width="42dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="757dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/arrow2"
        android:rotation="180"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/d6"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/b6"
        android:visibility="invisible"
        app:srcCompat="@drawable/d6" />

    <ImageView
        android:id="@+id/c8"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="671dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/c8"
        android:visibility="invisible"
        app:srcCompat="@drawable/c8" />

    <ImageView
        android:id="@+id/c9"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="614dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/c8"
        android:visibility="invisible"
        app:srcCompat="@drawable/c9" />

    <ImageView
        android:id="@+id/jd"
        android:layout_width="32dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="501dp"
        android:layout_marginBottom="327dp"
        android:contentDescription="@string/jb"
        android:visibility="invisible"
        app:srcCompat="@drawable/dj" />

    <ImageView
        android:id="@+id/c2"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="231dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="489dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/c2"
        app:srcCompat="@drawable/c2" />

    <ImageView
        android:id="@+id/c3"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="338dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="374dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/c3"
        app:srcCompat="@drawable/c3" />

    <ImageView
        android:id="@+id/c6"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="203dp"
        android:contentDescription="@string/c6"
        android:visibility="invisible"
        app:srcCompat="@drawable/c6" />

    <ImageView
        android:id="@+id/c5"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="58dp"
        android:contentDescription="@string/c5"
        android:visibility="invisible"
        app:srcCompat="@drawable/c5" />

    <ImageView
        android:id="@+id/c7"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="251dp"
        android:contentDescription="@string/c7"
        android:visibility="invisible"
        app:srcCompat="@drawable/c7" />

    <ImageView
        android:id="@+id/d2"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="157dp"
        android:contentDescription="@string/d2"
        android:visibility="invisible"
        app:srcCompat="@drawable/d2" />

    <ImageView
        android:id="@+id/h2"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="603dp"
        android:layout_marginBottom="52dp"

        android:contentDescription="@string/s2"
        app:srcCompat="@drawable/h2" />

    <ImageView
        android:id="@+id/s2"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="715dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/s2"
        app:srcCompat="@drawable/s2" />

    <ImageView
        android:id="@+id/d3"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="450dp"

        android:layout_marginTop="219dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="52dp"
        app:srcCompat="@drawable/d3" />

    <ImageView
        android:id="@+id/h3"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="563dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="52dp"
        app:srcCompat="@drawable/h3" />

    <ImageView
        android:id="@+id/s3"
        android:layout_width="94dp"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="673dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="52dp"
        app:srcCompat="@drawable/s3" />

    <ImageView
        android:id="@+id/c4"
        android:layout_width="32dp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="239dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/c4" />

    <ImageView
        android:id="@+id/d4"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="192dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/d4" />

    <ImageView
        android:id="@+id/h4"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="148dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/h4" />

    <ImageView
        android:id="@+id/s4"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="671dp"
        android:layout_marginTop="160dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/s4" />

    <ImageView
        android:id="@+id/ha"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="157dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ha" />

    <ImageView
        android:id="@+id/sa"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="156dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/sa" />

    <ImageView
        android:id="@+id/ca"
        android:layout_width="32dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="157dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ca" />

</RelativeLayout>